--- a/templates/abc123.xml
+++ b/templates/abc123.xml
@@ -73,4 +73,9 @@
       <option name="XML" value="true" />
     </context>
   </template>
+  <template name="loggg" value=" private val log:org.slf4j.Logger = org.slf4j.LoggerFactory.getLogger(javaClass)" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="KOTLIN" value="true" />
+    </context>
+  </template>
 </templateSet>
