AI-Bumblebee | 2021.1.1 Patch 2 <xiaqiulei@xiaqiulei-MBP-BL.local Update abc123.xml

--- a/templates/abc123.xml
+++ b/templates/abc123.xml
@@ -73,7 +73,7 @@
       <option name="XML" value="true" />
     </context>
   </template>
-  <template name="loggg" value=" private val log:org.slf4j.Logger = org.slf4j.LoggerFactory.getLogger(javaClass)" toReformat="false" toShortenFQNames="true">
+  <template name="loggg" value=" private val log:org.slf4j.Logger = org.slf4j.LoggerFactory.getLogger(javaClass)" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="KOTLIN" value="true" />
     </context>
